page report design